--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
-services: 
+services:
+
   db:
     image: mysql:latest
+    container_name: docker_sf4_mysql
     volumes: 
       - db_data:/var/lib/mysql
     environment: 
@@ -9,8 +11,11 @@ services:
       MYSQL_USER: ${DB_USER_NAME}
       MYSQL_PASSWORD: ${DB_USER_PASSWORD}
     restart: always
+    command: ['--character-set-server=utf8mb4', '--collation-server=utf8mb4_general_ci']
+
   adminer:
     image: adminer:latest
+    container_name: docker_sf4_adminer
     depends_on:
      - db
     environment:
@@ -18,8 +23,18 @@ services:
     ports: 
       - "${ADMINER_PORT}:8080"
     restart: always
+
+  maildev:
+    image: maildev/maildev
+    container_name: docker_sf4_maildev
+    command: bin/maildev --web 80 --smtp 25 --hide-extensions STARTTLS
+    ports:
+        - "${MAILDEV_PORT}:80"
+    restart: always
+
   php:
     image: webdevops/php-apache-dev:7.4
+    container_name: docker_sf4_www
     depends_on:
      - db
     ports:
@@ -33,6 +48,7 @@ services:
     environment:
       WEB_DOCUMENT_ROOT: /app/public
     restart: always
+
 volumes: 
   db_data:
   var:
